--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -3,6 +3,9 @@ header.header
         a(href=routes.home)
             img(src="../image1.png")
     .header__column
+        form(action=routes.search, method="get")
+            input(type="text", placeholoder="Search by term", name="term")
+    .header__column
         ul
             li
                 a(href=routes.join) Join
