--- a/views/home.pug
+++ b/views/home.pug
@@ -2,4 +2,9 @@ extends layouts/main.pug
 include mixins/videoBlock.pug
 
 block content
-    .videos
+    each item in videos
+        +videoBlock({
+            title:item.title,
+            views:item.views,
+            videoFile:item.videoFile
+        }) 
